# Projeto-Engenharia-de-Dados

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  read_parquet.py  script-03.py
dags/: currency_ingestion_dag.py
ingestion/: pipeline.py  source.py
scripts/: script-02.py
