[project]
name = "projeto-01-ingestao"
version = "0.1.0"
description = "Pipeline de ingestão de dados de câmbio com dlt, Airflow e MinIO"
requires-python = "==3.11.*"
dependencies = [
    "dlt[filesystem]==1.4.1",
    "pyarrow==15.0.2",
    "requests==2.32.3",
    "s3fs==2024.6.1",
    "boto3==1.34.144",
    "setuptools<71",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]